# server/api/models/tutor.js
@@ -6,23 +6,19 @@ const TutorSchema = new Schema({
         user_id:{type:mongoose.Types.ObjectId, ref:"user", require:true},
         reference:{
             about_me:{type:String},
-            major:{type:String},
-            institute:{type:String},
+            major:[String],
+            institute:[String],
             certificate:[String]
         },
-        working_experience:{
+        working_experience:[{
             year: {type:Number},
-            experience:[String]
-        },
+            experience:{type:String}
+        }],
         teaching_subject:[{
-            fee_per_hour: {type:Number},
-            fee_commitions: {type:Number},
-            fee_earn:{type:Number},
-            note:[String],
-            country:{type:String},
             academic_level:{type:String},
             academic_grade:{type:String},
-            course:[String],
+            subject:{type:String},
+            hourly_rate:{type:Number}
         }],
         free_calendar:[{
             start_time:{type:String},
